<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/TextAppearance.Compat.Notification"
    android:layout_width="match_parent"
    android:layout_height="64dp">

    <!--ImageView
        android:id="@+id/imvSeiunSky"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:baselineAligned="false"
        android:contentDescription="@string/ntf_imv_dsc"
        android:scaleX="2.1"
        android:scaleY="2.1"
        android:src="@drawable/im_button_close_2"
        android:translationX="8dp"
        android:translationY="10dp" /-->

    <ImageView
        android:id="@+id/imvIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/ntf_imv_dsc"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:src="@drawable/im_app_icon" />

    <TextView
        android:id="@+id/txvSwitch"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/ntf_txv_text"
        android:textColor="@color/design_default_color_primary"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/imbClose"
        android:layout_width="48dp"
        android:layout_height="64dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/ntf_imb_dsc"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:src="@drawable/im_button_close" />

</LinearLayout>