<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:gravity="center|center_vertical"
        android:rotationX="70"
        android:scaleY="2"
        android:singleLine="false"
        android:text="@string/txv_show_notification"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnHide"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnHideOnClickHandler"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/btn_hide"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnShow"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnShowOnClickHandler"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/btn_show"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>